[gd_scene load_steps=6 format=3 uid="uid://ccvgesflcfiel"]

[ext_resource type="Script" path="res://src/widgets/popup_name_input.gd" id="1_w7ksw"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="2_qok55"]
[ext_resource type="Texture2D" uid="uid://cf4urcy4ejis2" path="res://assets/textures/widgets/others/yellow_button00.png" id="3_l413q"]

[sub_resource type="LabelSettings" id="LabelSettings_kmmow"]
font_size = 9
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b30od"]
font_size = 12
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_name_input_popup" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7ksw")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(220, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_qok55")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 6
text = "Your score broke the record, 
leave your name!
"
label_settings = SubResource("LabelSettings_kmmow")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="te_name" type="TextEdit" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "YouNameï¼Ÿ"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="btn_quit" type="TextureButton" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_l413q")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/btn_quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Quit"
label_settings = SubResource("LabelSettings_b30od")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_confirm" type="TextureButton" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_l413q")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/btn_confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "confirm"
label_settings = SubResource("LabelSettings_b30od")
horizontal_alignment = 1
vertical_alignment = 1
